# ner-detector

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  llms.txt  pyproject.toml  run.py
.github/workflows/: benchmark-pages.yml  ci.yml
benchmark/: run_benchmark.py
benchmark/config/: compare_backends.yaml  compare_generated.yaml  label_maps.yaml  llm_gpt_oss_smoke.yaml
benchmark/datasets/: arxiv_gold.jsonl  conll_dev_sample.jsonl  marfago_gold.jsonl
config/: default_models.yaml  few_shot_examples.yaml  ner.yaml
docs/: README.md  architecture.md  benchmarks.md  ci.md  cli.md  configuration.md  for-agents.md  lab-theme.css  models.md  portfolio.md  python-api.md
docs/adr/: 001-doc-f1-primary-metric.md
docs/benchmark-report/: index.html  report.html  report.md
ner_detector/: __init__.py  cli.py  config.py  detect.py  env.py  registry.py  types.py
ner_detector/backends/: __init__.py  base.py  chunking.py  families.py  generative_ner_backend.py  gliner_backend.py  llm_backend.py  nuner_backend.py  pattern.py  transformers_backend.py
ner_detector/backends/llm/: __init__.py  client.py  parse.py  prompts.py  settings.py
ner_detector/eval/: __init__.py  confusion.py  confusion_html.py  curve_runner.py  curve_svg.py  gold_validate.py  html_report.py  lab_chrome.py  label_map.py  loaders.py  metrics.py  paths.py  radar_svg.py  repeat_stats.py  report.py  report_methodology.py  runner.py  threshold_curves.py  types.py
scripts/: agent_smoke.py  compare_gpt_oss_predictions.py  retheme_report_html.py
tests/: conftest.py  test_chunking.py  test_config.py  test_confusion_html.py  test_curve_runner.py  test_curve_svg.py  test_entrypoints.py  test_env.py  test_eval_confusion.py  test_eval_extra.py  test_eval_gold_validate.py  test_eval_html_report.py  test_eval_label_map.py  test_eval_loaders.py  test_eval_metrics.py  test_eval_paths.py  test_eval_repeat_stats.py  test_eval_report_methodology.py  test_eval_runner.py  test_families.py  test_generative_ner_backend.py  test_gliner_backend.py  test_llm_backend.py  test_llm_client.py  test_llm_parse.py  test_llm_prompts.py  test_ner_config.py  test_nuner_backend.py  test_pattern_backend.py  test_radar_svg.py  test_registry.py  test_registry_ml.py  test_sota_backends.py  test_threshold_curves.py  test_transformers_backend.py
tests/fixtures/datasets/: conll_dev_sample.jsonl  marfago_gold.jsonl
