[project]
name = "ner-detector"
version = "0.1.0"
description = "Named entity recognition with pluggable deterministic, ML, and LLM backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.51.0",
    "torch>=2.0",
    "accelerate>=1.0.0",
]
gliner = [
    "gliner>=0.2.0",
]
llm = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
ner-detect = "ner_detector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ner_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ner_detector"]

[tool.coverage.report]
fail_under = 95
show_missing = true
