[project]
name = "ner-detector"
version = "0.1.0"
description = "Named entity recognition with pluggable deterministic, ML, and LLM backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.51.0",
    "torch>=2.0",
    "accelerate>=1.0.0",
]
gliner = [
    "gliner>=0.2.0",
]
llm = [
    "httpx>=0.27.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
ner-detect = "ner_detector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ner_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["ner_detector"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["ner_detector", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"ner_detector/cli.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["ner_detector"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
packages = ["ner_detector"]
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
